<resources>
    <string name="app_name">JTU_Day6App</string>
    <string name="select_a_pizza_size">Select a pizza size:</string>
    <string name="select_meat_topping">Select meat topping:</string>
    <string name="select_vegetables">Select Vegetables:</string>
    <string name="mushrooms">Mushrooms (</string>
    <string name="tomatoes">Tomatoes (</string>
    <string name="squash">Squash (</string>
    <string name="black_olives">Black Olives (</string>
    <string name="none">None (</string>
    <string name="sausage">Sausage (</string>
    <string name="pepperoni">Pepperoni (</string>
    <string name="ham">Ham (</string>
    <string name="duck">Duck (</string>
    <string name="number_of_miles_0_50_per_mile">Number of Miles ($0.50 per mile):</string>
    <string name="buy_the_pizza">Buy the Pizza</string>
    <string name="action_settings">action settings</string>
    <string name="meats_baackground_blue">Meats baackground = blue</string>
    <string name="veggies_background_green">veggies background = green</string>
    <string-array name="pizza_sizes">
        <item>10\" ($7)</item>
        <item>13\" ($9)</item>
        <item>16\" ($11)</item>
    </string-array>
</resources>
