<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="312dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="@string/select_a_pizza_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_pizzaSize" />

            <Spinner
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/SPN_PIZZA_SIZE"
                android:dropDownWidth="match_parent" />

            <TextView
                android:text="@string/select_meat_topping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_meat"
                 />

            <RadioGroup
                android:layout_width="307dp"
                android:layout_height="wrap_content"
                android:id="@+id/RADIOGROUP_MEAT"
                >

                <RadioButton
                    android:text="@string/none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/RBTN_NONE"
                    />

                <RadioButton
                    android:text="@string/pepperoni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/RBTN_PEPPERONI"
                    />

                <RadioButton
                    android:text="@string/sausage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/RBTN_SAUSAGE"
                    />

                <RadioButton
                    android:text="@string/ham"
                    android:layout_width="163dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/RBTN_HAM"
                    />

                <RadioButton
                    android:text="@string/duck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/RBTN_DUCK" />

            </RadioGroup>

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/TV_TOTAL_PRICE" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="@string/select_vegetables"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_vegetable" />

            <CheckBox
                android:text="@string/mushrooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/CB_MUSHROOM"
                 />

            <CheckBox
                android:text="@string/black_olives"
                android:layout_width="wrap_content"
                android:id="@+id/CB_BLACK_OLIVE"
                android:layout_height="wrap_content" />

            <CheckBox
                android:text="@string/tomatoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/CB_TOMATO"
                />

            <CheckBox
                android:text="@string/squash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/CB_SQUASH"
                />

            <TextView
                android:text="@string/number_of_miles_0_50_per_mile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                />


            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/edc_miles" />

            <Button
                android:text="@string/buy_the_pizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:id="@+id/BTN_PURCHASE" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

