<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="dq3395yi.jtu_day6app.MainActivity"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <TextView
            android:text="@string/select_a_pizza_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/tv_pizzaSize" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/SPN_PIZZA_SIZE"
            android:layout_below="@+id/tv_pizzaSize"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/select_meat_topping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/SPN_PIZZA_SIZE"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/tv_meat" />

        <TextView
            android:text="@string/select_vegetables"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RADIOGROUP_MEAT"
            android:layout_alignLeft="@+id/CB_TOMATO"
            android:layout_alignStart="@+id/CB_TOMATO"
            android:id="@+id/tv_vegetable" />

        <CheckBox
            android:text="@string/mushrooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/CB_MUSHROOM"
            android:layout_below="@+id/tv_vegetable"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/TV_TOTAL_PRICE"
            android:layout_alignEnd="@+id/TV_TOTAL_PRICE" />

        <CheckBox
            android:text="@string/tomatoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/CB_TOMATO"
            android:layout_below="@+id/CB_BLACK_OLIVE"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/CB_BLACK_OLIVE"
            android:layout_alignEnd="@+id/CB_BLACK_OLIVE" />

        <CheckBox
            android:text="@string/squash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/CB_SQUASH"
            android:layout_below="@+id/CB_TOMATO"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/CB_TOMATO"
            android:layout_alignEnd="@+id/CB_TOMATO" />

        <CheckBox
            android:text="@string/black_olives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/CB_BLACK_OLIVE"
            android:layout_below="@+id/CB_MUSHROOM"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/TV_TOTAL_PRICE"
            android:layout_alignEnd="@+id/TV_TOTAL_PRICE" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RADIOGROUP_MEAT"
            android:layout_below="@+id/tv_meat"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <RadioButton
                android:text="@string/none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/RBTN_NONE"
                 />

            <RadioButton
                android:text="@string/sausage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/RBTN_SAUSAGE"
                 />

            <RadioButton
                android:text="@string/pepperoni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/RBTN_PEPPERONI"
               />

            <RadioButton
                android:text="@string/ham"
                android:layout_width="163dp"
                android:layout_height="wrap_content"

                android:id="@+id/RBTN_HAM"
                />

            <RadioButton
                android:text="@string/duck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/RBTN_DUCK"
               />
        </RadioGroup>

        <TextView
            android:text="@string/number_of_miles_0_50_per_mile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_below="@+id/CB_SQUASH"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edc_miles"
            android:layout_below="@+id/textView5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TV_TOTAL_PRICE"
            android:layout_below="@+id/edc_miles"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="@string/buy_the_pizza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edc_miles"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:id="@+id/BTN_PURCHASE" />
    </RelativeLayout>
</ScrollView>